--- a/views/home.ejs
+++ b/views/home.ejs
@@ -514,15 +514,16 @@
         <div id="how-to-use">
             <div id="title-heading">
                 <h1>TweeterBackendApi</h1>
-                <div id="version-show"><p>1.0.0</p></div>
+                <div id="version-show"><p>1.1.0</p></div>
                 <div id="clone-show"><p>Clone</p></div>
             </div>
         </div>
         <div id="intro">
-            <h2>Introducation</h2>
             <h3>Hello👋!</h3>
-            <p>This project is a web api that mimics the core features of Twitter, such as <span class="span-id">posting tweets</span>, <span class="span-id">commenting on posts</span>, and <span class="span-id">uploading images</span>. Users can also create new accounts and <span class="span-id">signIn</span> or <span class="span-id">signUp</span> using <span class="span-id">JsonWebToken</span> for secure authentication.<br><br>
-            The project is developed by <span class="span-id"><a href="https://github.com/kishanvish1613/">@kishan.dev</a></span> using Node.js, Express, S3, and other technologies. It is an API that can be integrated with any front-end framework or library.</p>
+            <p>This project is a web api that mimics the core features of Twitter, such as <span class="span-id">posting tweets</span>, <span class="span-id">commenting on posts</span>, and <span class="span-id">uploading images</span>. Users can also create new accounts and <span class="span-id">signIn</span> or <span class="span-id">signUp</span> using <span class="span-id">JsonWebToken</span> for secure authentication.</p>
+            <p>To ensure data integrity and enhance API security, <span class="span-id">Zod</span> input validation is implemented to verify that incoming data adheres to expected schema requirements. Additionally, <span class="span-id">Jest</span> testing is integrated for both unit and integration testing, allowing for early identification of any issues within the API components.</p>
+            <p>The project is developed by <span class="span-id"><a href="https://github.com/kishanvish1613/">@kishan.dev</a></span> using Node.js, Express, S3, and other technologies. It is an API that can be integrated with any front-end framework or library.</p>
+            
         </div>
         <div id="Getting-Started">
             <div id="Getting-Started-heading">
@@ -678,6 +679,7 @@
             <div id="icon-link-box">
                 <div class="link-class"><a href="https://www.linkedin.com/in/kishan-vishwakarma-36011025b "><i class="ri-linkedin-fill"></i> LinkedIn</a></div>
                 <div class="link-class"><a href="https://github.com/kishanvish1613/"><i class="ri-github-line"></i> Github</a></div>
+                <div class="link-class"><a href="https://kishan-dev.onrender.com/"><i class="ri-quill-pen-line"></i>Portfolio</a></div>
             </div>
         </div>
     </div>
